added new openapi and imeplemented post
